influxdb3/tests/cli/snapshots/lib__cli__fail_without_output-file_when_format_is_parquet_for_table.snap
---
source: influxdb3/tests/cli/mod.rs
expression: output
---
Show command failed: must specify an output file path with `--output` parameter when formatting the output as `parquet`