influxdb3/tests/cli/snapshots/lib__cli__iox_schema_table_name_exists,_but_should_error_because_we're_concerned_here_with_system_tables.snap
---
source: influxdb3/tests/cli/mod.rs
expression: output
---
Error:   × system table 'cpu' not found: please use a valid system table name:
  │ ["distinct_caches", "last_caches", "parquet_files",
  │ "processing_engine_triggers", "queries"]
  │
