influxdb3/tests/cli/snapshots/lib__cli__random_table_name_doesn't_exist,_should_error.snap
---
source: influxdb3/tests/cli/mod.rs
expression: output
---
Error:   × system table 'meow' not found: please use a valid system table name:
  │ ["distinct_caches", "last_caches", "parquet_files",
  │ "processing_engine_triggers", "queries"]
  │
