influxdb3/tests/cli/snapshots/lib__cli__test_create_table_fail_existing.snap
---
source: influxdb3/tests/cli/mod.rs
expression: result
---
Error:   × server responded with error [409 Conflict]: table 'foo.bar' already exists
